--- a/package.json
+++ b/package.json
@@ -23,15 +23,19 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.3",
+    "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@vue/test-utils": "^1.3.0",
+    "autoprefixer": "^10.4.2",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.4.4",
     "eslint": "^8.4.1",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
     "jest": "^27.4.4",
+    "postcss": "^8.4.8",
+    "tailwindcss": "^3.0.23",
     "vue-jest": "^3.0.4"
   }
 }
