--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "yarn lint:js",
     "lintfix": "yarn lint:js --fix",
@@ -35,6 +36,7 @@
     "eslint-plugin-vue": "^8.2.0",
     "jest": "^27.4.4",
     "postcss": "^8.4.8",
+    "push-dir": "^0.4.1",
     "tailwindcss": "^3.0.23",
     "vue-jest": "^3.0.4"
   }
