--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "jest": "^27.4.4",
     "postcss": "^8.4.8",
     "push-dir": "^0.4.1",
+    "sass": "^1.49.9",
+    "sass-loader": "^10.1.1",
     "tailwindcss": "^3.0.23",
     "vue-jest": "^3.0.4"
   }
